--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <h1>{{ site.description }}</h1>
     <hr>
 
-    {% for album in site.data.albums %}
+    {% for album in site.data.2025 %}
     <div class="row">
         <div class="col-sm-6 col-md-6">
             <img src="{{ album.artwork }}" class="img-fluid rounded" alt="...">
@@ -20,9 +20,15 @@ layout: default
             {% if album.bandcamp %}
             <a href="{{ album.bandcamp }}" target="_blank" class="icon"><i class="fa-brands fa-bandcamp"></i></a>
             {% endif %}
+            {% if album.spotify %}
             <a href="{{ album.spotify }}" target="_blank" class="icon"><i class="fa-brands fa-spotify"></i></a>
+            {% endif %}
+            {% if album.youtube %}
             <a href="{{ album.youtube }}" target="_blank" class="icon"><i class="fa-brands fa-youtube"></i></a>
+            {% endif %}
+            {% if album.apple %}
             <a href="{{ album.apple }}" target="_blank" class="icon"><i class="fa-brands fa-itunes-note"></i></a>
+            {% endif %}
         </div>
     </div>
     <br>
